Version 1.3.x - xx xxx 2009

  * Clean up autoconf warnings. Enable -fPIC as default.

  * Attempt to detect Java Home. Ticket #83.

  * Check for SWIG dependent language headers before 
    enabling that language. Ticket #88.

  * Ruby exceptions are cryptic. Ticket #96.

  * Add PERL to "make install". Ticket #103.

  * Clean up g++ deprecation warnings. Ticket #104.

Version 1.3.1 - 18 Mar 2009

  * Expose RetsVersionToString to SWIG languages. Ticket #92.

  * Expose Raw RETS enhancement to .NET. Ticket #93.

  * Add RETS/1.7.2 functionality. Ticket #97.

  * Add try/catch blocks around lexical_cast in GetObject 
    and GetObjectResponse. Ticket #98.

  * Added GetRetsReplyCode() and GetRetsReplyText() to
    ObjectDescriptor and will parse text/xml files in
    multipart responses. Ticket #99. 

  * Modify configure scripts for POSIX 1003.2 compliance.
    Ticket #100.

  * Handle Boost versioned libraries. Ticket #101.

  * Calling HasMaxRows() causes only one row to be returned.
   Ticket #102.

Version 1.3.0b1 - 06 Jan 2009

  * Converted the http client model to allow for parallel
    search requests. Ticket #73.

  * Report XML parse error "no element found" as an http
    exception when there is no more data on the stream.
    Ticket #75.

  * Added RETS 1.7 checks to example code. Ticket #58.

  * Propagate Rets Exceptions up to PHP. Ticket #81.

  * Throw an exception when trying to dereference a null
    URL. Ticket #84.

  * Add API to allow raw RETS data to be returned to a stream.
    Ticket #85.

  * Add GetObjectResponse::GetHttpResponse() and GetErrorText().
    Ticket #86.

  * Add RetsSession::MODE_NO_SSL_VERIFY to disable SSL
    verification. Ticket #87.

  * Add API to allow raw RETS data to be reinjected into the
    parse stream for C++ and Java. Ticket #90.

  * Configure fails if Java not installed. Ticket #91.

Version 1.2.5 - 26 Nov 2008

  * Expose RETS_XML_UTF8_ENCODING to SWIG languages.
    Ticket #80.
