@@ -13,6 +13,8 @@ Version 1.3.x - xx xxx 2009
 
   * Clean up g++ deprecation warnings. Ticket #104.
 
+  * Make default encoding ISO. Ticket #105.
+
 Version 1.3.1 - 18 Mar 2009
 
   * Expose RetsVersionToString to SWIG languages. Ticket #92.
